增加上传服务器脚本 1.增加必要的回调来完成计数

--- a/libadblockplus-android-settings/build.gradle
+++ b/libadblockplus-android-settings/build.gradle
@@ -28,6 +28,9 @@ android {
     }
 }
 
+rootProject.ext.uploadPackageName="org.adblockplus.libadblockplus.settings"
+rootProject.ext.libraryVersion="1.0.0"
+apply from: rootProject.getRootDir().getAbsolutePath() + "/upload.gradle"
 
 
 dependencies {
