--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ buildscript {
   }
   dependencies {
     classpath 'com.android.tools.build:gradle:2.3.0'
+    classpath "org.jfrog.buildinfo:build-info-extractor-gradle:3.1.1"
   }
 }
 
